--- a/lesson10/homework.html
+++ b/lesson10/homework.html
@@ -29,7 +29,7 @@
         color: red;
       }
     </style>
-    <link rel="stylesheet" href="./css/commom.css" />
+    <link rel="stylesheet" href="../css/commom.css" />
   </head>
   <body>
     <div style="color: red; font-size: 30px">文本内容1</div>
