--- a/lesson10/css-basic.html
+++ b/lesson10/css-basic.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/09-css-basic.css" />
+    <link rel="stylesheet" href="../css/09-css-basic.css" />
     <style type="text/css">
       /* h1选择器：选择HTML元素 */
       /* h1 {
@@ -16,7 +16,7 @@
         color: blue;
       }
     </style>
-    <link rel="stylesheet" href="css/09-css-basic.css" />
+    <link rel="stylesheet" href="../css/09-css-basic.css" />
   </head>
   <body>
     <!-- <h1>我是H1标题,一次页面当中只能出现一次</h1>
