--- a/lesson11/14-homework-center.html
+++ b/lesson11/14-homework-center.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      @import url('./css//09-css-basic.css');
+      div {
+        height: 50px;
+        width: 200px;
+        background-color: aqua;
+        text-align: center;
+        line-height: 50px;
+      }
     </style>
   </head>
   <body>
