--- a/lesson/semantic.html
+++ b/lesson/semantic.html
@@ -34,7 +34,7 @@
     <p>
       dependent content
       <figure>
-        <img src="./public/4B84E4DE-CD8D-4D49-A626-469FCE02E4E9.heic" alt="3 people" />
+        <img src="../public/4B84E4DE-CD8D-4D49-A626-469FCE02E4E9.heic" alt="3 people" />
         <figcaption>people play</figcaption>
       </figure>
     </p>
